--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>城西大学数学科の教職課程</title>
- </head>
+<title>城西大学数学科の教職課程</title>
+</head>
 <body>
-  <header>
-  </header>
-  <div class="top-wrapper">
-    <div class="container">
+<div>
+    <div>
       <h1>城西大学数学科の教職課程</h1>
       <h2>2020年度入学生向け履修上の注意</h2>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
-      </div>
+      
     </div>
   </div>
   <div class="lesson-wrapper">
