--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    城西大学教職課程に関する説明</a>
          のPDFをよく読み、リンクされている動画も見て履修してください。</p>
       </div>
-<h1>お知らせ</h1>
+<h1>その他のお知らせ</h1>
   <h2>城西大学数学科のLINE公式アカウントを開設しました</h2>
 <p>
 <a href="https://lin.ee/4WZ2g8M3r" target="_blank">
@@ -21,14 +21,11 @@
  このボタンをタップまたはクリックするとを友だち追加できます。
 </p>
 <h2>城西大学数学科のDISCORDサーバーを開設しました</h2>
-<p>
-こちらのURL
-</p>
 <p> 
 <a href="https://discord.gg/32XWvS" target="_blank">https://discord.gg/32XWvS</a>
 </p>
 <p>
-  をタップまたはクリックするとフレンドとして参加できます。
+ このURLをタップまたはクリックするとフレンドとして参加できます。
   </p>
  </div>
  </body>
