--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </p>
 <h2>城西大学数学科のDISCORDサーバーを開設しました</h2>
 <p> 
-<a href="https://discord.gg/Zfk6gJu" target="_blank">https://discord.gg/vsrXB4</a>
+<a href="https://discord.gg/Zfk6gJu" target="_blank">https://discord.gg/Zfk6gJu</a>
 </p>
 <p>
  このURLをタップまたはクリックするとフレンドとして参加できます。
