--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <a href="https://inuma-manabu.github.io/inuma-manabu.josai.math.kyoshoku.io/p301_p328_教育職員免許状取得のための課程.pdf" target="_blank">
    「教育職員免許状取得のための課程」（pp.301-328）</a>
       </p>
-
+</div>
+<div>
 <h1>その他のお知らせ</h1>
   <h2>城西大学数学科のLINE公式アカウントを開設しました</h2>
 <p>
