--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <h1>城西大学数学科の教職課程（数学科）</h1>
 <p>
   <a href="https://ja.overleaf.com/read/gyzjbwmjtzxy" target="_blank">
-   2020年度城西大学教職課程（数学科）に関する説明</a>
-         をよく読んでください. 履修方法については動画も見て履修してください。</p>
+   2020年度城西大学教職課程（数学科）に関する説明</a> をよく読んでください. 履修方法については動画も見て履修してください。</p>
   <p>
   学生便覧2020
     <a href="https://inuma-manabu.github.io/inuma-manabu.josai.math.kyoshoku.io/p301_p328_教育職員免許状取得のための課程.pdf" target="_blank">
@@ -16,8 +15,8 @@
       </p>
 </div>
 <div>
-<h2>問い合わせ先 SNS （教職課程以外の問い合わせもOKです）</h2>
-  <h3>城西大学数学科のLINE公式アカウントを開設しました</h3>
+<h2>問い合わせ先SNS（教職課程以外の問い合わせもOKです）</h2>
+<h3>城西大学数学科のLINE公式アカウントを開設しました</h3>
 <p>
 <a href="https://lin.ee/4WZ2g8M3r" target="_blank">
   <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" height="36" border="0">
