--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <a href="https://ja.overleaf.com/read/gyzjbwmjtzxy" target="_blank">
    2020年度城西大学教職課程（数学科）に関する説明</a> をよく読んでください。履修方法については資料にリンクが掲載されている動画も見てください。 
 
-  <h3>  2020年度版教職課程の手引き<h3>
+  <h3>  2020年度版教職課程の手引き</h3>
 おもに3年次の介護等体験実習や4年生の教育実習についての手引きになっています. 
     後ろのほうに教職課程に関する行事予定表も掲載されています. 
   <ul>
-   <li><a href="https://inuma-manabu.github.io/inuma-manabu.josai.math.kyoshoku.io/2020教職課程の手引き【確定版191116】.pdf" target="_blank">
+   <li>
+    紀尾井町キャンパス版<a href="https://inuma-manabu.github.io/inuma-manabu.josai.math.kyoshoku.io/2020教職課程の手引き【確定版191116】.pdf" target="_blank">
   2020教職課程の手引き【確定版191116】</a>
   </li>
   <li>
