--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 <h1>城西大学数学科の教職課程（数学科）</h1>
-
- <h3>履修方法</h3>
-学生便覧の教職課程に関する説明部分
-    <a href="https://inuma-manabu.github.io/inuma-manabu.josai.math.kyoshoku.io/p301_p328_教育職員免許状取得のための課程.pdf" target="_blank">
-   「教育職員免許状取得のための課程」（pp.301-328）</a>をよく読んでください。
-  
-<h３>補足説明資料</h3>
+<h3>履修方法</h3>
+<a href="https://inuma-manabu.github.io/inuma-manabu.josai.math.kyoshoku.io/p301_p328_教育職員免許状取得のための課程.pdf" target="_blank">
+2020年度入学生の学生便覧の教職課程に関する説明部分「教育職員免許状取得のための課程」（pp.301-328）</a>
+<br>
+他の学年の学生便覧にも, ページが違いますが, 同様の部分があります。
+<h3>補足説明資料</h3>
 <a href="https://ja.overleaf.com/read/gyzjbwmjtzxy" target="_blank">
-   2020年度城西大学教職課程（数学科）に関する説明</a> をよく読んでください。資料中にリンクが掲載されている動画も見て参考にしてください。 
-
-  <h3>  2020年度版教職課程の手引き</h3>
+城西大学教職課程（数学科）に関する説明</a>
+<br>
+資料中にリンクされている動画も参考にしてください。 
+<h3>  2020年度版教職課程の手引き</h3>
 おもに3年次の介護等体験実習や4年生の教育実習に関する説明が書かれたいます（手引きの後ろのほうに教職課程に関する説明会などの行事予定表も掲載されています）。
  2018年度入学生向けに書かれていますが、他の学年でも参考になると思います。    
   <ul>
