--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="kyoshoku.css">
 </head>
 <body>
-<div class="wrapper">
+<div class="content">
 <h1>城西大学数学科の教職課程（数学科）</h1>
 <h3>履修方法</h3>
 <p>
@@ -36,7 +36,7 @@
 <a href="https://ja.overleaf.com/read/hbqsszgvgych" target="_blank">FY2020 城西大学 教育実習</a>
 </p>
 上記の手引きに記載できなかった詳細な注意が書かれています。 
-<div class="push"></div>
+<!--<div class="push"></div>-->
 </div>
 <footer class="footer">
 <h3>教職課程に関する問い合わせ先</h3>
