--- a/index.html
+++ b/index.html
@@ -55,34 +55,31 @@
 <address>
 <p>このサイトに関するお問い合わせは下記のいずれかにお願いします。</p>
 <p>
- 坂戸キャンパス：教職課程センター</p>
-<ul>
-<li>
+ 坂戸キャンパス：教職課程センター
+<br>
 E-mail：<a href="mailto:shoin@josai.ac.jp">shoin@josai.ac.jp</a>
-</li>
-<li>
+<br>
 TEL:<a href="tel:+492717941">(049)271-7941</a>
-</li>
-</ul>
+</p>
 <p>
 紀尾井町キャンパス：教学事務
-</p>
+<br>
+E-mail：<a href="mailto:kyoshoku-kioi@josai.ac.jp">kyoshoku-kioi@josai.ac.jp</a>
+<br>
+TEL:<a href="tel:+362388421">(03)6238-8421</a>
+<p>
 <ul>
 <li>
-E-mail：<a href="mailto:kyoshoku-kioi@josai.ac.jp">kyoshoku-kioi@josai.ac.jp</a>
+数学科SNSアカウント
 </li>
 <li>
-TEL:<a href="tel:+362388421">(03)6238-8421</a>
+    <a href="https://twitter.com/math_josai" class="flowbtn10" target="_blank"><i class="fab fa-twitter"></i></a>
+</li>
+<li><a href="https://lin.ee/4WZ2g8M3r" class="flowbtn10" target="_blank"><i class="fab fa-line"></i></a></li>
+</li>
+<li><a href="https://discord.gg/Zfk6gJu" class="flowbtn10" target="_blank"><i class="fab fa-discord"></i></a>
 </li>
 </ul>
-<p>数学科SNSアカウント</p>
-<p>
-<span class="mar-10"><a href="https://twitter.com/math_josai" class="flowbtn10" target="_blank"><i class="fab fa-twitter"></i></a>
-</span>
-<span class="mar-10"><a href="https://lin.ee/4WZ2g8M3r" class="flowbtn10" target="_blank"><i class="fab fa-line"></i></a></li>
-</span>
-<span class="mar-10"><a href="https://discord.gg/Zfk6gJu" class="flowbtn10" target="_blank"><i class="fab fa-discord"></i></a>
-</span>
 </p>
 <p>
 井沼学 Twitterアカウント <a href="https://twitter.com/math_inuma" class="flowbtn10" target="_blank"><i class="fab fa-twitter"></i></a>
