--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         城西大学数学科の教職課程（数学科）
     </h1>
     <nav class="pc-nav">
-        <ul>
+       <div class="sample"> <ul>
             <li><a href="#">ABOUT</a></li>
             <li><a href="#">SERVICE</a></li>
             <li><a href="#">COMPANY</a></li>
             <li><a href="#">CONTACT</a></li>
         </ul>
+         </div>
     </nav>
 </header>
 <main>
