--- a/index.html
+++ b/index.html
@@ -1,51 +1,15 @@
 <html>
 <head>
-   <meta charset="utf-8">
-   <meta name="robots" content="noindex,nofollow">
    <title>城西大学数学科の教職課程</title>
-
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="kyoshoku.css">
-
-   <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-   <script>
-   $(function() {
-      const hum = $('#hamburger, .close')
-      const nav = $('.sp-nav')
-      hum.on('click', function(){
-         nav.toggleClass('toggle');
-      });
-   });
-   </script>
+<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+<link rel="stylesheet" href="kyoshoku.css">
 </head>
 <body>
-   <header>
-      <h1>
+  <div class="main-visual">
+   <h1>
          城西大学数学科の教職課程
-      </h1>
-      <nav class="pc-nav">
-         <ul>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">SERVICE</a></li>
-            <li><a href="#">COMPANY</a></li>
-            <li><a href="#">CONTACT</a></li>
-         </ul>
-      </nav>
-      <nav class="sp-nav">
-         <ul>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">SERVICE</a></li>
-            <li><a href="#">COMPANY</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li class="close"><span>閉じる</span></li>
-         </ul>
-      </nav>
-      <div id="hamburger">
-         <span></span>
-      </div>
-   </header>
-   <div class="main-visual">
-     <h3>履修方法</h3>
+   </h1>
+   <h3>履修方法</h3>
 <a href="https://inuma-manabu.github.io/inuma-manabu.josai.math.kyoshoku.io/p301_p328_教育職員免許状取得のための課程.pdf" target="_blank">
 2020年度入学生の学生便覧の教職課程に関する説明部分「教育職員免許状取得のための課程」（pp.301-328）</a>
 <br>
@@ -57,7 +21,7 @@
 資料中にリンクされている動画も参考にしてください。 
 <h3>  2020年度版教職課程の手引き</h3>
 <ul>
-   <li>
+  <li>
     坂戸キャンパス版<a href="https://inuma-manabu.github.io/inuma-manabu.josai.math.kyoshoku.io/2020教職課程の手引き【確定版191116】.pdf" target="_blank">
   2020教職課程の手引き【確定版191116】</a>
   </li>
