--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  </div>
               <div id="footer-fixed">
                      <div id="footer-bk">
-                        <div id="footer">
+                        <!--<div id="footer">-->
                    <h3>問い合わせ先</h3>         
                            <div class="foot-wrap">
         <div class="menu-left">
@@ -70,7 +70,7 @@
 井沼学 Twitterアカウント <a href="https://twitter.com/math_inuma" class="flowbtn10" target="_blank"><i class="fab fa-twitter"></i></a>
 </p>
 </small>
-    </div>
+    <!--</div>-->
        </div>
          </div>
 </body>
